chore: remove unnecessary files and rename notebook

--- a/model/canwin.ipynb
+++ b/model/canwin.ipynb
@@ -12,8 +12,7 @@
     "import torch\n",
     "from torch import nn\n",
     "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "import random"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -1059,7 +1058,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(net.state_dict(), 'net.pth')"
+    "torch.save(net, 'net.pth')"
    ]
   }
  ],
